test/types/string/bradc/string2ints/badstring2val.good
badstring2val.chpl:3: error: Unexpected character when converting from string to int(64): 'e'
