test/types/string/bradc/string2ints/badstring2val.chpl
var s = "1e";

var x = s:int;
writeln("x is: ", x);

